fix number cropp isuue

--- a/src/containers/customer/components/styles.scss
+++ b/src/containers/customer/components/styles.scss
@@ -563,6 +563,7 @@ ol {
 }
 
 .accordion-body{
+  padding-left: 4px;
   padding-bottom: 20px;
   > ol{
     padding-left: 7px;
